# degreedle

./: .gitignore  AGENTS.md  App.tsx  cesconfig.jsonc  package-lock.json  package.json  tailwind.config.js
api/: weather.js  weather.ts
components/: Container.tsx  EditScreenInfo.tsx  HomeScreen.tsx  WeatherIcon.tsx
constants/: config.ts  defaults.ts  index.js  index.ts  symbols.ts
interfaces/: api.ts
weather-proxy/: .env.example  .gitignore  Cargo.toml  README.md
weather-proxy/src/: handlers.rs  main.rs  middleware.rs  types.rs
